# sparkive

./: .gitignore  LICENSE  README.md  Setup.hs  makeSASS  sparkive.cabal  stack.yaml  starchive.cabal
app/: Main.hs
conf/: sparkive_example.conf
db/: create.sql  db.sql  dropall.sql  populate.sql  test.sql
src/: Config.hs  ContentTypes.hs  DBConn.hs  Exception.hs  ExceptionTemplate.hs  Exceptions.hs  Routes.hs  Server.hs  Template.hs  TemplateUtil.hs
src/Auth/: Login.hs  Session.hs
src/DB/: AcidStateBackend.hs  Conn.hs  PostgresBackend.hs  Query.hs  Types.hs
src/Exception/: Handler.hs  TH.hs  Util.hs
src/Template/: footer.hamlet  header.hamlet
src/Util/: Random.hs
src/View/: ContentTypes.hs  LoginView.hs  RenderContext.hs  Template.hs  TemplateUtil.hs  Util.hs  Views.hs
template/hamlet/: admin-panel.hamlet  create-db-button.hamlet  err-box.hamlet  errBox.hamlet  generic-admin-page.hamlet  genericResult.hamlet  header.hamlet  home.hamlet  login.hamlet  main-page-banner.hamlet  mainPageBanner.hamlet
template/julius/: create-db-button.julius
template/lucius/: login.scss  styles.lucius  styles.scss  text-button.scss
