name:                sparkive
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/MortimerMcMire315/sparkive#readme
license:             GPL-3
license-file:        LICENSE
author:              Seth A. Yoder
maintainer:          seth.a.yoder@gmail.com
copyright:           2016 Seth A. Yoder
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , conf/sparkive_example.conf
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server

  other-modules:       View.Template
                     , View.TemplateUtil
                     , View.ContentTypes
                     , View.Views
                     , Auth.Login
                     , Exception.Handler
                     , Exception.TH
                     , Exception.Util
                     , DB.AcidStateBackend
                     , DB.PostgresBackend
                     , DB.Conn
                     , DB.Types
                     , DB.Query
                     , Routes
                     , Config

  build-depends:       base >= 4.7 && < 5
                     , acid-state >= 0.14
                     , bcrypt >= 0.0.10
                     , blaze-html >= 0.8 && < 0.9
                     , bytestring >= 0.10
                     , ConfigFile >=1.1.4 && < 1.2
                     , containers >= 0.5
                     , data-default >= 0.7
                     , exceptions >= 0.8 && < 0.9
                     , happstack-server >= 7 && < 8
                     , MissingH >= 1.4 && < 2.0
                     , mtl >= 2.2 && < 2.3
                     , postgresql-simple >= 0.5 && < 0.6
                     , safecopy >= 0.9
                     , shakespeare >= 2.0.11 && < 3
                     , split >= 0.2 && < 0.3
                     , template-haskell >= 2.10 && < 3
                     , text >= 1.2.2 && < 1.3
                     , transformers >= 0.5 && < 0.6

  default-language:    Haskell2010

executable sparkive
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sparkive
  default-language:    Haskell2010

test-suite starchive-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sparkive
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MortimerMcMire315/sparkive
